# segmind-python

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  example.py  examples.md  playground.py  pyproject.toml  replicate.txt
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: conf.py  contributing.rst  examples.rst  index.rst  quickstart.rst  swagger.html
docs/_static/openapi/: segmind-sdk.yaml
docs/api/: accounts.rst  client.rst  exceptions.rst  files.rst  generations.rst  index.rst  models.rst  pixelflows.rst  webhooks.rst
segmind/: __init__.py  accounts.py  client.py  exceptions.py  files.py  finetune.py  generations.py  models.py  pixelflows.py  resource.py  response.py  webhooks.py
tests/: conftest.py  test_accounts.py  test_client.py  test_exceptions.py  test_files.py  test_generations.py  test_models.py  test_pixelflows.py  test_webhooks.py
tests/fixtures/: mock_responses.py  sample_files.py
tests/integration/: __init__.py  test_workflow_scenarios.py
