[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "segmind"
dynamic = ["version"]
description = "Python SDK for Segmind API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Segmind", email = "support@segmind.com" }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
    "httpx>=0.25.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx_rtd_theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
[project.urls]
homepage = "https://www.segmind.com/"
repository = "https://github.com/segmind/segmind"

[tool.pytest.ini_options]
testpaths = "tests/"
asyncio_mode = "auto"

[tool.hatch.version]
path = "segmind/__init__.py"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
ignore = ["E501", "B008"]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
per-file-ignores = {"tests/*" = ["S101"]}

[tool.uv.workspace]
members = [
    "segmind",
]
